Media Columns text alignment and layout style fixes

--- a/src/styles/blocks/_media-columns.scss
+++ b/src/styles/blocks/_media-columns.scss
@@ -7,7 +7,6 @@
 
   @include breakpoint("sm") {
     column-gap: 0;
-    row-gap: vw-clamp(24, 32);
   }
 
   &.layout-1 {
@@ -21,7 +20,7 @@
 
   &.layout-2 {
     grid-template-columns: repeat(3, 1fr);
-    & > :first-child {
+    & > *:nth-child(2n - 1) {
       grid-column: span 1;
 
       picture {
@@ -43,18 +42,14 @@
       }
     }
 
-    & > :last-child {
+    & > *:nth-child(2n) {
       grid-column: span 2;
     }
   }
 
   &.layout-3 {
     grid-template-columns: repeat(3, 1fr);
-    & > :first-child {
-      grid-column: span 2;
-    }
-
-    & > :last-child {
+    & > *:nth-child(2n) {
       grid-column: span 1;
 
       picture {
@@ -74,6 +69,10 @@
           }
         }
       }
+    }
+
+    & > *:nth-child(2n - 1) {
+      grid-column: span 2;
     }
   }
 
@@ -82,6 +81,21 @@
 
     & > * {
       grid-column: span 1;
+    }
+
+    & > .block-media-columns__container:nth-of-type(1) {
+      grid-row-start: 1;
+    }
+    & > .block-media-columns__content:nth-of-type(3) {
+      grid-row-start: 2;
+      margin-bottom: vw-clamp(24, 32);
+    }
+
+    & > .block-media-columns__container:nth-of-type(2) {
+      grid-row-start: 3;
+    }
+    & > .block-media-columns__content:nth-of-type(4) {
+      grid-row-start: 4;
     }
   }
 
@@ -108,5 +122,13 @@
     display: flex;
     flex-direction: column;
     row-gap: 0.25rem;
+    padding-top: vw-clamp(24, 32);
+
+    &.has-background {
+      padding-bottom: vw-clamp(32, 60);
+      padding-left: vw-clamp(40, 72);
+      padding-right: vw-clamp(40, 72);
+      padding-top: 0;
+    }
   }
 }
